--- a/src/templates/period_list.html
+++ b/src/templates/period_list.html
@@ -7,7 +7,7 @@
       <th>Stop</th>
       <th>Coverage</th>
       <th>Note</th>
-      <th>Source note</th>
+      <th>Editorial note</th>
     </tr>
   </thead>
 
@@ -33,7 +33,7 @@
         %>
       </td>
       <td><%= period.note %></td>
-      <td><%= period.sourceNote %></td>
+      <td><%= period.editorialNote %></td>
     </tr>
     <% }); %>
   <% } %>
