--- a/style.less
+++ b/style.less
@@ -39,6 +39,7 @@ html, body {
   input, select {
     width: 310px;
   }
+  input.long { width: 100% };
 
   #js-dateType { display: inline-block !important; }
   #js-detect-dateType {
