Fix bug in spatial region autocomplete

--- a/src/views/period_edit/templates/spatial_coverage_form.html
+++ b/src/views/period_edit/templates/spatial_coverage_form.html
@@ -11,5 +11,5 @@
     <label>Spatial coverage extent</label>
     <div id="js-spatial-coverage-container">
       <ul class="spatial-coverage-list"></ul>
-      <input class="form-control" type="text" placeholder="Begin typing to search">
+      <input class="form-control country-autocomplete" type="text" placeholder="Begin typing to search">
     </div>
