--- a/src/views/period_edit/templates/spatial_coverage_form.html
+++ b/src/views/period_edit/templates/spatial_coverage_form.html
@@ -1,3 +1,4 @@
+<h3>Spatial coverage</h3>
   <div class="form-group">
     <label class="control-label">Spatial coverage description</label>
     <div>
