--- a/src/views/period_edit/templates/temporal_coverage_form.html
+++ b/src/views/period_edit/templates/temporal_coverage_form.html
@@ -1,9 +1,10 @@
+<h3>Temporal coverage</h3>
 <div data-error-container="dates"></div>
 
 <div class="period-dates form-group row">
 
   <div class="date-input-container">
-    <label class="control-label" for="js-startDate">Start</label>
+    <label class="control-label field-required-label" for="js-startDate">Start</label>
     <div>
       <input class="form-control date-input" id="js-startDate" type="text" />
       <div class="date-input-message"></div>
@@ -11,7 +12,7 @@
   </div>
 
   <div class="date-input-container">
-    <label class="control-label" for="js-endDate">Stop</label>
+    <label class="control-label field-required-label" for="js-endDate">Stop</label>
     <div>
       <input class="form-control date-input" id="js-endDate" type="text" />
       <div class="date-input-message"></div>
