Add spatial coverage description guide/selector

--- a/style.less
+++ b/style.less
@@ -113,6 +113,13 @@ html, body {
   }
 }
 
+ul.three-column-list li {
+  display: inline-block;
+  width: 30%;
+  margin-bottom: 4px;
+  padding-right: 4px;
+}
+
 dl.source {
   > div { margin-bottom: 8px; }
 }
