Add getDisplayTitle function for sources
Includes names, year published, title. Can definitely be improved, but
not without making some assumptions about names, which becomes a problem
pretty quick.

--- a/src/templates/period_collection_list.html
+++ b/src/templates/period_collection_list.html
@@ -12,13 +12,7 @@
     <tr>
       <td>
         <a href="#periodCollections/<%= encodeURIComponent(periodCollection.id) %>/">
-          <%
-          var source = periodCollection.source();
-          print(source.get('title')
-             || source.get('citation')
-             || source.get('partOf').title
-             || source.get('partOf').citation);
-          %>
+          <%= periodCollection.source().displayTitle() %>
         </a>
       </td>
       <td><%= periodCollection.definitions().length %></td>
