Add CSV output option; move output fns to PeriodCollection model
Also, allow users to export period collections while viewing them

--- a/src/templates/period_collection_show.html
+++ b/src/templates/period_collection_show.html
@@ -5,10 +5,20 @@ var sourceInformation = require('./source.html');
 
 <h1>Periodization</h1>
 
+<div style="float: right">
+  <h2>Export</h2>
+  <ul class="unstyled">
+    <li><a href="#" class="download-file" data-filetype="csv">CSV</a></li>
+    <li><a href="#" class="download-file" data-filetype="ttl">Text/Turtle</a></li>
+    <li><a href="#" class="download-file" data-filetype="jsonld">JSON-LD</a></li>
+  </ul>
+</div>
+
 <h2>Source</h2>
 <div id="source-information">
   <%= sourceInformation({ source: periodCollection.source }) %>
 </div>
+
 
 <% if (periodCollection.editorialNote) { %>
 <h2>Editorial note</h2>
