--- a/src/views/period_edit/templates/general_form.html
+++ b/src/views/period_edit/templates/general_form.html
@@ -1,8 +1,16 @@
 <div class="row">
   <div class="col-md-6 period-form-panel">
     <div class="form-group" data-error-container="label">
-      <label class="control-label field-required-label" for="js-label">Label</label>
-      <input class="form-control" id="js-label" type="text" />
+      <label class="control-label field-required-label" for="js-label">Original label</label>
+      <div class="input-group">
+        <div id="js-label-language" class="input-group-addon original-label-language btn btn-default"></div>
+        <input class="form-control" id="js-label" type="text" />
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label">Alternate labels</label>
+      <div id="js-alternate-labels"></div>
     </div>
   </div>
 
