Allow toggling whether to parse dates automatically

--- a/style.less
+++ b/style.less
@@ -72,7 +72,7 @@ html, body {
     padding-right: 48px;
   }
 
-  input, select {
+  input[type="text"].medium, select {
     width: 310px;
   }
   input.long, textarea.long { width: 100% };
@@ -94,22 +94,6 @@ html, body {
 
   .period-dates {
     margin: 0 0 1em 0;
-  }
-  /*
-  .date-input-container {
-    display: inline-block;
-    width: 240px;
-    vertical-align: top;
-  }
-  */
-  .date-input {
-    width: 250px;
-  }
-  .date-input-message {
-    height: 1.5em;
-    margin-top: 6px;
-    color: #777;
-    font-size: 12px;
   }
 }
 
