Enable toggling earliest/latest start/stop fields

--- a/src/views/period_edit/templates/temporal_coverage_form.html
+++ b/src/views/period_edit/templates/temporal_coverage_form.html
@@ -20,9 +20,12 @@
       <input class="form-control label-input" id="js-startLabel" type="text" />
     </div>
 
-    <div class="date-single-year col-md-4">
-      <label for="js-startYear">Year</label>
-      <input class="form-control year-input" id="js-startYear" type="text" />
+    <div class="date-single-year">
+      <div class="col-md-4">
+        <label for="js-startYear">Year</label>
+        <input class="form-control year-input" id="js-startYear" type="text" />
+      </div>
+      <div class="col-md-4">&nbsp;</div>
     </div>
 
     <div class="date-multi-year hide">
@@ -34,6 +37,11 @@
         <label for="js-startLatest">Latest year</label>
         <input class="form-control latest-year-input" id="js-startLatest" type="text" />
       </div>
+    </div>
+
+    <div class="col-md-4">
+      <label>&nbsp;</label>
+      <button class="btn btn-primary toggle-year-parts">Toggle earliest/latest</button>
     </div>
   </div>
 
@@ -47,9 +55,12 @@
       <input class="form-control label-input" id="js-endLabel" type="text" />
     </div>
 
-    <div class="date-single-year col-md-4">
-      <label for="js-startYear">Year</label>
-      <input class="form-control year-input" id="js-startYear" type="text" />
+    <div class="date-single-year">
+      <div class="col-md-4">
+        <label for="js-startYear">Year</label>
+        <input class="form-control year-input" id="js-startYear" type="text" />
+      </div>
+      <div class="col-md-4">&nbsp;</div>
     </div>
 
     <div class="date-multi-year hide">
@@ -61,6 +72,11 @@
         <label for="js-startLatest">Latest year</label>
         <input class="form-control latest-year-input" id="js-startLatest" type="text" />
       </div>
+    </div>
+
+    <div class="col-md-4">
+      <label>&nbsp;</label>
+      <button class="btn btn-primary toggle-year-parts">Toggle earliest/latest</button>
     </div>
   </div>
 
