--- a/style.less
+++ b/style.less
@@ -180,6 +180,25 @@ ul.actions-list {
 
 }
 
+// Backend select
+.backend-option {
+  padding: 6px 0;
+  .remove-backend,
+  .remove-backend:hover,
+  .remove-backend:active,
+  .remove-backend:focus {
+    text-decoration: none;
+  }
+
+  .remove-backend {
+    margin-right: 3px;
+  }
+  .remove-backend img {
+    height: 1.25em;
+    width: auto;
+  }
+}
+
 // Timelines
 svg .period text {
   opacity: 0;
