Initial stab at improved sync view

--- a/style.less
+++ b/style.less
@@ -222,6 +222,16 @@ svg .period:hover {
   text-align: center;
 }
 
+// patch list
+.select-patch {
+  .toggle-patch-select {
+    text-align: center;
+    vertical-align: middle;
+    width: 48px;
+
+  }
+}
+
 
 // ORCID
 #auth-menu li a { display: inline-block }
