--- a/src/templates/sync.html
+++ b/src/templates/sync.html
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<div id="js-list-periods">
+<div id="js-list-changes">
   <h2>Fetched periods</h2>
-  <div id="fetched-periods-list"></div>
+  <div id="fetched-changes-list"></div>
 </div>
