Start adding submit patch view

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,8 +5,11 @@
   <div class="col-md-2">
     <h2>Actions</h2>
     <ul class="actions-list">
+      <hr />
       <li><a href="#p/<%= backend.name %>/periodCollections/add/" class="btn btn-primary">Add period collection</a></li>
       <li><a href="#p/<%= backend.name %>/sync/" class="btn btn-primary">Sync with server</a></li>
+      <li><a href="#p/<%= backend.name %>/patches/submit/" class="btn btn-primary">Send patch</a></li>
+      <hr />
       <li><button id="js-delete-database" class="btn btn-danger">Delete database</button></li>
     </ul>
   </div>
