--- a/src/templates/submit_patch.html
+++ b/src/templates/submit_patch.html
@@ -1,1 +1,6 @@
-<h1>Create new patch</h1>
+<h1>Submit patch</h1>
+
+<div>
+  <input type="text" value="<%= window.location.origin %>" />
+  <button id="js-find-changes" class="btn btn-primary">Find changes</button>
+</div>
