--- a/style.less
+++ b/style.less
@@ -232,6 +232,14 @@ svg .period:hover {
   }
 }
 
+.diff-addition {
+  background: #e6ffe6;
+}
+.diff-deletion {
+  background: #ffe6e6;
+  text-decoration: line-through;
+}
+
 
 // ORCID
 #auth-menu li a { display: inline-block }
