Tweak syncing and patch submission some more
Getting closer- this is almost usable

--- a/src/templates/changes/period_collection_add.html
+++ b/src/templates/changes/period_collection_add.html
@@ -11,6 +11,6 @@
   <td>
     <div><%= periodCollection.source().displayTitle() %></div>
     <div>Definitions: <%= periodCollection.definitions().length %></div>
-    <div>Time span: <%= timeSpan.lower.getEarliestYear() || 'unknown' %> to <%= timeSpan.upper.getLatestYear() || 'unknown' %></div>
+    <div>Time span: <%= timeSpan.lower ? timeSpan.lower.getEarliestYear() : 'unknown' %> to <%= timeSpan.upper ? timeSpan.upper.getLatestYear() : 'unknown' %></div>
   </td>
 </tr>
