--- a/src/templates/changes/period_edit.html
+++ b/src/templates/changes/period_edit.html
@@ -1,4 +1,4 @@
 <div>
-  <h5>In source: <%= source.displayTitle() %></h5>
-  <div><%= diffs %></div>
+  <h4 class="period-patch-source">In source: <%= source.displayTitle() %></h4>
+  <table class="table table-bordered"><tbody><%= diffs %></tbody></table>
 </div>
