--- a/src/templates/changes/change_row.html
+++ b/src/templates/changes/change_row.html
@@ -1,6 +1,8 @@
-<div class="select-patch row">
-  <div class="toggle-patch-select col-md-1">
-    <input type="checkbox" data-patch-ids="<%= patchIDs.join(',') %>" />
-  </div>
-  <div class="col-md-11"><%= diffHTML %></div>
-</div>
+<tr class="select-patch">
+  <td class="toggle-patch-select">
+    <label>
+      <input type="checkbox" data-patch-ids="<%= patchIDs.join(',') %>" />
+    </label>
+  </td>
+  <td> <%= diffHTML %> </td>
+</tr>
