--- a/style.less
+++ b/style.less
@@ -226,14 +226,48 @@ svg .period:hover {
 .select-patch {
   .toggle-patch-select {
     text-align: center;
-    vertical-align: middle;
-    width: 48px;
+    width: 120px;
+    user-select: none;
+    &.patch-selected {
+      background: #f9f9f9;
+    }
+  }
+  label {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    cursor: pointer;
+  }
+  input[type="checkbox"] {
+    height: 100%;
+    margin: 0;
+    cursor: pointer;
+  }
+  dl { padding: 0; margin: 0; }
+}
 
+@additionColor: #e6ffe6;
+
+.new-periods-patch-collection td + td {
+  background: @additionColor;
+}
+
+.patch-collection {
+  margin-bottom: 2em;
+  .period-patch-source {
+    margin-left: 122px;
+  }
+}
+
+.select-patch-header {
+  label, input {
+    margin: 0;
+    vertical-align: middle;
   }
 }
 
 .diff-addition {
-  background: #e6ffe6;
+  background: @additionColor;
 }
 .diff-deletion {
   background: #ffe6e6;
