Flesh out patch submit view some more

--- a/src/templates/submit_patch.html
+++ b/src/templates/submit_patch.html
@@ -1,6 +1,11 @@
 <h1>Submit patch</h1>
 
-<div>
-  <input type="text" value="<%= window.location.origin %>" />
-  <button id="js-find-changes" class="btn btn-primary">Find changes</button>
+<div id="js-submit-patch-container">
+  <div>
+    <input type="text" value="<%= window.location.origin %>" />
+    <button id="js-find-changes" class="btn btn-primary">Find changes</button>
+  </div>
+
+  <div id="js-patch-list">
+  </div>
 </div>
